优化算法接口