@@ -1,6 +1,8 @@
 package cqwang.doubleball.algorithm;
 
+import cqwang.doubleball.model.BallDataDetail;
 import cqwang.doubleball.model.DoubleColorBallItem;
+import cqwang.doubleball.preload.DoubleColorBallDataPreload;
 import cqwang.doubleball.preload.RedBallDataPreload;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.Range;
@@ -13,24 +15,53 @@ import java.util.List;
 public interface PredictionAlgorithm {
     /**
      * 生成预测结果
-     * @param historicalData
+     *
+     * @param preSampleNum               前置样本量
+     * @param targetDoubleColorBallIndex 要预测的目标数据
      * @return
      */
-    DoubleColorBallItem predict(List<DoubleColorBallItem> historicalData);
+    default DoubleColorBallItem predict(int preSampleNum, int targetDoubleColorBallIndex) {
+
+        var sampleStartIndex = targetDoubleColorBallIndex - preSampleNum;
+        if (sampleStartIndex < 0) {
+            return null; // 样本不足，不预测
+        }
+
+        // 前序样本
+        var preSampleList = DoubleColorBallDataPreload.allData().subList(sampleStartIndex, preSampleNum);
+        // 目标数据
+        var target = DoubleColorBallDataPreload.allData().get(targetDoubleColorBallIndex);
+
+        // 预测结果
+        var predictResult = new DoubleColorBallItem(true);
+        for (int redIndex = 0; redIndex < 6; redIndex++) {
+            var redBallDetail = RedBallDataPreload.redBallData().getRedBallDetail(redIndex);
+            var redRange = getRedRange(predictResult, redBallDetail);
+            var predictRed = predictRed(redBallDetail, redRange);
+            predictResult.getRedValueList().add(predictRed);
+        }
+        predictResult.setBlueValue(predictBlue(RedBallDataPreload.blueBallDetail()));
+        return predictResult;
+    }
+
+    int predictRed(BallDataDetail redBallDataDetail, Range<Integer> redRange);
+
+    int predictBlue(BallDataDetail redBallDataDetail);
+
 
     /**
      * 获取要预测位序红球的范围
+     *
      * @param result
-     * @param predictIndex
+     * @param redBallDetail
      * @return
      */
-    default Range<Integer> getRedRange(DoubleColorBallItem result, int predictIndex) {
-        var redBallDetail = RedBallDataPreload.redBallData().getRedBallDetail(predictIndex);
+    default Range<Integer> getRedRange(DoubleColorBallItem result, BallDataDetail redBallDetail) {
         if (CollectionUtils.isEmpty(result.getRedValueList())) {
             return Range.between(redBallDetail.getMin(), redBallDetail.getMax());
         }
 
-        var lastRed = result.getRedValueList().getLast();
+        var lastRed = result.getRedValueList().get(result.getRedValueList().size() - 1);
         if (lastRed <= redBallDetail.getMin()) {
             return Range.between(redBallDetail.getMin(), redBallDetail.getMax());
         }
@@ -40,6 +71,7 @@ public interface PredictionAlgorithm {
 
     /**
      * 校验生成的红色球数值是否合法
+     *
      * @param result
      * @param predictIndex
      * @param predictValue
@@ -55,7 +87,8 @@ public interface PredictionAlgorithm {
         }
 
         // 数值只能按照位序变大
-        if (predictValue <= result.getRedValueList().getLast()) {
+        var lastRed = result.getRedValueList().get(result.getRedValueList().size() - 1);
+        if (predictValue <= lastRed) {
             return false;
         }
 
